# openclaw-cpp

./: .gitignore  CMakeLists.txt  README.md  config.json
docs/: DEVELOPMENT_LOG.md
include/openclaw/: message.h  session.h  types.h  unix_socket_client.h
src/: main.cpp  simple_chat.cpp
src/agent/: agent.cpp  agent_loop.cpp  agent_loop.h  model_client.cpp  model_client.h
src/client/: unix_socket_client.cpp
src/gateway/: gateway.cpp  gateway.h  ws_server.cpp  ws_server.h
src/session/: session.h  session_manager.cpp  session_manager.h
src/tools/: tool.h  tool_engine.cpp  tool_engine.h  tools.cpp  tools.h
src/utils/: config.cpp  config.h  logger.cpp  logger.h
